# fishnets

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  VSOpenFileFromDirFilters.json  get_cpm.cmake
code/fishnets/: API.h  AsioImpl.cpp  CMakeLists.txt  ClientSslSettings.hpp  Context.hpp  ContextWorkGuard.hpp  EndpointInfo.hpp  ExecutorPtr.hpp  FishnetsImpl.cpp  HttpHeaderFields.hpp  HttpMsgBody.hpp  HttpRequestBody.hpp  HttpRequestBuilderPtr.hpp  HttpRequestDesc.cpp  HttpRequestDesc.hpp  HttpRequestHeader.cpp  HttpRequestHeader.hpp  HttpRequestOptions.hpp  HttpResponseHandler.cpp  HttpResponseHandler.hpp  HttpResponseHandlerPtr.hpp  HttpResponseSocket.hpp  HttpResponseSocketPtr.hpp  LoadRootCertificates.inl  MakeHttpRequest.hpp  MakeSimpleHttpRequest.hpp  Post.hpp  SSLSettings.hpp  ServerSslSettings.hpp  SessionHandler.hpp  SslContext.hpp  Task.hpp  Timer.hpp  TimerCb.hpp  WebSocket.hpp  WebSocketClient.hpp  WebSocketClientSSLSettings.hpp  WebSocketEndpointInfo.hpp  WebSocketOptions.hpp  WebSocketPtr.hpp  (+18 more)
code/fishnets/util/: ThreadRunner.hpp  WsSessionHandler.cpp  WsSessionHandler.hpp  WsSessionHandlerPtr.hpp  byte_span.hpp
example/: CMakeLists.txt  LoadRootCertificates.inl  RootCertificates.inl  ServerCertificate.inl  e-EchoServer.cpp  e-OneshotClient.cpp  e-TerminalClient.cpp  echo-test.html
scratch/: CMakeLists.txt  scratch-raw.cpp  scratch.cpp
test/: CMakeLists.txt  TestNullSSLSettings.cpp  TestNullSslCtx.cpp  TestSSLSettings.cpp  TestSSLSettings.hpp  TestSeqCheck.hpp  TestSslCtx.cpp  TestSslCtx.hpp  t-HttpRequestDesc.cpp  t-PostAfterClose.cpp  t-ReconnectingClient.cpp  t-ServerMainThread.cpp  t-SimpleClientServer.cpp  t-WSSessionHeartbeat.cpp  t-httpbin.org.cpp  t-websocket.org.cpp  t-ws-SimpleClientServer.cpp
